fixed a bit of styling on the login pages where the github banner was overlapping

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,7 +46,7 @@ form label {
   color: rgba( 0, 0, 0, .7);
 }
 
-.feed-loading-page h1 {
+.feed-loading-page {
   margin-top: 30%;
 }
 
